--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@
             </form>
         </section>
 
+        <section id="tasksContainer">
+            <div id="pendingTasks">
+                <h2>Tareas pendientes</h2> 
+                <ul id="pendingTasksList" class="task-list"> 
+                </ul>
+            </div>
 
+            <div id="completedTasks">
+                <h2>Tareas completadas</h2>
+                <ul id="completedTasksList" class="task-list">
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
 
